--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </section> 
                     </div>  
                     <div class="diego">
-                        <img src="imagens/diego.jpg" alt="Diego" width="200px">
+                        <img src="" alt="Diego" width="200px">
                         <section>
                             <h2>Diego Marcelo</h2>
                             <h3>Guitarrista e tecladista</h3>
