--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="kemeli">
                         <img src="imagens/kemeli.jpg" alt="Kemeli" width="200px">
                         <section>
-                            <h2>Indrid Kemeli</h2>
+                            <h2>Ingrid Kemeli</h2>
                             <h3>Vocalista</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum earum est consequatur nulla minus commodi sunt vel eligendi! Iste consequuntur, dignissimos enim ex excepturi blanditiis adipisci natus nulla debitis provident.</p>
                         </section> 
